ombi: navbar bug on mobile fix

--- a/CSS/themes/ombi/ombi-base.css
+++ b/CSS/themes/ombi/ombi-base.css
@@ -21,14 +21,10 @@ body {
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
     background-color: rgba(0, 0, 0, 0.25);
 }
-.navbar-default .navbar-toggle:hover {
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
     background-color: transparent;
 }
-@media (max-width: 924px) {
-.navbar-collapse.collapse {
-    display: none!important;
-}
-}
+
 
 /* Search bar */
 .search-bar-background[_ngcontent-c1] {
